fixed package.json and aligned some header text

--- a/public/style.css
+++ b/public/style.css
@@ -38,6 +38,7 @@ header nav {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
 
 }
 
@@ -70,3 +71,4 @@ h3 {
 table {
   width: 100%;
 }
+
